[gd_scene load_steps=3 format=3 uid="uid://ck14wr62flk5e"]

[ext_resource type="Script" path="res://scenes/menu/menuDebut.gd" id="1_dbs0r"]
[ext_resource type="PackedScene" uid="uid://dmrwvqqd7su0d" path="res://scenes/audio_stream_player.tscn" id="2_g0e38"]

[node name="menuDebut" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dbs0r")

[node name="VBoxText" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -377.0
offset_right = 377.0
offset_bottom = 232.0
grow_horizontal = 2

[node name="Titre" type="Label" parent="VBoxText"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 150
text = "Do Infinity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="Label" parent="VBoxText"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="Score" type="Label" parent="VBoxText"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="VBoxButton" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -298.5
offset_top = -135.5
offset_right = 298.5
offset_bottom = 135.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_constants/separation = 20
alignment = 1

[node name="ButtonPlay" type="Button" parent="VBoxButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="ButtonSettings" type="Button" parent="VBoxButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="ButtonQuit" type="Button" parent="VBoxButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Exit"

[node name="AudioStreamPlayer" parent="." instance=ExtResource("2_g0e38")]

[connection signal="pressed" from="VBoxButton/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="VBoxButton/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="VBoxButton/ButtonQuit" to="." method="_on_button_quit_pressed"]
